<resources>
    <string name="app_name">AartiSangrah</string>
    <string name="aarti">गणेशाची आरती</string>
    <string name="shlok">गणेशाचे श्लोक</string>
    <string name="chalisa">गणेश चालीसा</string>
    <string name="wallpaper">GANESH WALLPAPERS</string>
    <string name="title_activity_ganesh">ganesh</string>


    <string name="title_activity_krishna">krishna</string>
    <string name="title_activity_swami">swami</string>
    <string name="title_activity_hanuman">hanuman</string>


    <string name="shiv_aarti">शिवजीची आरती </string>
    <string name="shiv_shlok">शिव श्लोक</string>
    <string name="shiv_chalisa">शिव चालीसा</string>
    <string name="shiv_wallpaper">SHIV WALLPAPERS</string>

    <string name="laxmi_aarti">श्री लक्ष्मीची आरती</string>
    <string name="laxmi_shlok">श्री लक्ष्मी श्लोक</string>
    <string name="laxmi_chalisa">श्री लक्ष्मी चालीसा</string>
    <string name="laxmi_wallpaper">LAXMI WALLPAPERS</string>


    <string name="krishna_aarti">श्रीकृष्णाची आरती</string>
    <string name="krishna_shlok">श्रीकृष्ण श्लोक</string>
    <string name="krishna_chalisa">श्रीकृष्ण चालीसा</string>
    <string name="krishna_wallpaper">KRISHNA WALLPAPERS</string>


    <string name="swami_aarti">स्वामी समर्थांची आरती</string>
    <string name="swami_shlok">स्वामी समर्थ श्लोक</string>
    <string name="swami_chalisa">स्वामी समर्थ चालीसा</string>
    <string name="swami_wallpaper">SWAMI WALLPAPERS</string>


    <string name="hanuman_aarti">हनुमानाची आरती</string>
    <string name="hanuman_shlok">हनुमान श्लोक</string>
    <string name="hanuman_chalisa">हनुमान चालीसा</string>
    <string name="hanuman_wallpaper">HANUMAN WALLPAPERS</string>

    <string name="ganesh_aarti1">सुखकर्ता दुःखहर्ता वार्ता विघ्नाची
नुरवी पुरवी प्रेम कृपा जयाची
सर्वांगी सुंदर उटी शेंदुराची
कंठी झलके माल मुक्ता फलांची।
जयदेव जयदेव जयदेव जयदेव
जयदेव जयदेव जय मंगलमूर्ति
दर्शन मात्रे मन कामना पूर्ती। जयदेव जयदेव जयदेव जयदेव

रत्नखचित फरा तुज गौरीकुमरा
चंदनाची उटी कुमकुम केशरा
हीरे जड़ित मुकुट शोभतो बरा
रुणझुणती नूपुरे चरणी घागरिया।
जयदेव जयदेव जयदेव जयदेव
जयदेव जयदेव जय मंगलमूर्ति
दर्शन मात्रे मन कामना पूर्ती। जयदेव जयदेव जयदेव जयदेव

लम्बोदर पीताम्बर फणिवर बंधना
सरल सोंड वक्र तुंड त्रिनयना
दास रामाचा वाट पाहे सदना
संकटी पावावे निर्वाणी रक्षावे सुर वर वंदना।
जयदेव जयदेव जयदेव जयदेव
जयदेव जयदेव जय मंगलमूर्ति
दर्शन मात्रे मन कामना पूर्ती। जयदेव जयदेव जयदेव जयदेव ।।</string>


    <string name="ganesh_aarti2">जय गणेश, जय गणेश, जय गणेश देवा।
माता जाकी पार्वती, पिता महादेवा।।

एकदंत, दयावन्त, चार भुजाधारी,
माथे सिन्दूर सोहे, मूस की सवारी।
पान चढ़े, फूल चढ़े और चढ़े मेवा,
लड्डुअन का भोग लगे, सन्त करें सेवा।। ..
जय गणेश, जय गणेश, जय गणेश, देवा।
माता जाकी पार्वती, पिता महादेवा।।

अंधन को आंख देत, कोढ़िन को काया,
बांझन को पुत्र देत, निर्धन को माया।
‘सूर’ श्याम शरण आए, सफल कीजे सेवा।।
जय गणेश जय गणेश जय गणेश देवा ..
माता जाकी पार्वती, पिता महादेवा।

दीनन की लाज रखो, शंभु सुतकारी।
कामना को पूर्ण करो जय बलिहारी।
</string>


    <string name="ganesh_shlok1">
    वक्रतुंड महाकाय सूर्यकोटी समप्रभ|
        निर्विघ्नं कुरु मे देव सर्वकार्येषु सर्वदा||</string>

    <string name="ganesh_shlok2">
  प्रारंभी विनंती करू गणपति विद्यादयासागरा |
    अज्ञानत्व हरूनि बुद्धीमति दे आराध्य मोरेश्र्वरा ||
    चिंता, क्लेश, दारिद्रय, दुःख हरूनि देशांतरा पाठवी |
        हेरंबा, गणनायका, गजमुखा भक्ता बहु तोषवी ||</string>


    <string name="ganesh_shlok3">मोरया मोरया मी बाळ तान्हे
तुझीच सेवा करू काय जाणे
अन्याय माझे कोटय़ानकोटी
मोरेश्वरा बा तू घाल पोटी</string>

    <string name="ganesh_shlok4">घोर हा नको फार कष्टलो |निजहितास मी व्यर्थ गुंतलो |
वारि शीघ्र संसार यातना |हे दयानिधे श्री गजानना || १ ||

विषय गोड हे लागले मला |यामुळे असे घात आपुला |
कळुनिया असें भ्रांति जाईना |हे दयानिधे श्री गजानना || २ ||

त्रिविध ताप हा जाळितो अती |काम क्रोध हे प्राण पीडती |
चित्त सर्वथा स्वस्थ राहिना |हे दयानिधे श्री गजानना || ३ ||

स्त्री धनादि हे आठवे मनी |छंद हाच रे दिवसयामिनी |
विसरलो तुला दीनपालना |हे दयानिधे श्री गजानना || ४ ||

माऊली पिता बंधू सोयरा |तूंचि आमुचा निश्चये खरा |
शरण तुंज मी विघ्नभंजना |हे दयानिधे श्री गजानना || ५ ||

म्हणवितो तुझा दास या जनी |सकळ व्यापका जाणशी मनी |
भुक्ती मुक्ती दे भक्तपालना |हे दयानिधे श्री गजानना || ६ ||

काय काय रे साधनें करू |मी असे तुझे मूर्ख लेकरु |
विटंबिती मला द्वेषभावना |हे दयानिधे श्री गजानना || ७ ||

विषयचिंतनें शोक पावलों |देह बुध्दीने व्यर्थ नाडलों |
भालचंद्रजी तोड़ी बंधना |हे दयानिधे श्री गजानना || ८ ||

गजमुखा तुझी वाट पहातां |नेत्र शीणले जाण तत्वतां |
भेटसी कधी भ्रमनिवारणा |हे दयानिधे श्री गजानन || ९ ||

प्रभु समर्थ तू आमुचे शिरी |वेष्टिलों असे विषयापामरीं |
नवल हेंचि रे वाटते मना |हे दयानिधे श्री गजानना || १० ||

अगुण अद्वया तू परात्परा |पार नेणवे विधि हरीहरां |
अचल निर्मला नित्य निर्गुणा |हे दयानिधे श्री गजानना || ११ ||

जीवन व्यर्थ हे तुज वेगळे |स्वहित आपुले काम साधिले |
सुख नसे सदा मोहयातना |हे दयानिधे श्री गजानना || १२ ||

फारसे मला बोलता न ये |पाउले तुझे देखिलीं स्वये |
मांडिली असे बहुत वल्गना |हे दयानिधे श्री गजानना || १३ ||

दीनबंधू हे ब्रीद आपुले |साच तूं करीं दाविं पाउले |
मंगलालया विश्वजीवना |हे दयानिधे श्री गजानना || १४ ||

नाशिवंत रे सर्व संपदा |हे नको मला पाव एकदा |
क्षेम देउनी चित्तरंजना |हे दयानिधे श्री गजानना || १५ ||

जातसे घडी पल युगापरी |लागली तुझी खंती अंतरी |
स्वामी आपुला विरह साहिना |दयानिधे श्री गजानना || १६ ||

कळेल तें करी विनविणे किती |तारी अथवा मारीं गणपती |
सकलदोष अन संकष्टनाशना |हे दयानिधे श्री गजानना || १७ ||

आवडे मला त्रिभुवनाकृती |पूजुनी बरी करीन आरती |
धांव पांव रे मोदकाशना |हे दयानिधे श्री गजानना || १८ ||

हृदय कठीण तूं न करि सर्वथा |अंत आमुचा बघसी पुरता |
सिध्दी वल्लभा मूषकवाहना |हे दयानिधे श्री गजानना || १९ ||

कल्पवृक्ष तू कामधेनु वा |लाविजे स्तनीं जिविंच्या जिवा |
हाचि हेत रे शेष भुषणा |हे दयानिधे श्री गजानना || २० ||

गणपति तुझे नाम चांगले |आवड़ी बहू चित्त रंगले |
प्राथना तुझी गौरीनंदना |हे दयानिधि श्री गजानना || २१ ||

तारिं मोरया दुःखसागरीं |गोसावीनंदन प्रार्थना करी |
आत्मया मनी जाण चिदघना |हे दयानिधे श्री गजानना || २२ ||</string>




</resources>