<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="30dp"
    android:background="@drawable/aarti_bg"
    android:paddingRight="30dp"
    tools:context=".ganesh">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aarti"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:textSize="28dp"
        android:textStyle="bold"
        android:backgroundTint="#C9EF9C21"
        android:id="@+id/btn1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shlok"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="#C9EF9C21"
        android:layout_marginTop="16dp"
        android:textSize="28dp"
        android:id="@+id/btn2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chalisa"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="#C9EF9C21"
        android:layout_marginTop="16dp"
        android:textSize="28dp"
        android:id="@+id/btn3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="#C9EF9C21"
        android:layout_marginTop="16dp"
        android:textSize="28dp"
        android:id="@+id/btn4"/>

</LinearLayout>

