<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@drawable/aarti_bg"
    tools:context=".krishna">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/krishna_aarti"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:backgroundTint="#C9EF9C21"
        android:textSize="28dp"
        android:id="@+id/btn13"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/krishna_shlok"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:backgroundTint="#C9EF9C21"
        android:textSize="28dp"
        android:id="@+id/btn14"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/krishna_chalisa"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="28dp"
        android:backgroundTint="#C9EF9C21"
        android:id="@+id/btn15"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/krishna_wallpaper"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="#C9EF9C21"
        android:layout_marginTop="16dp"
        android:textSize="28dp"
        android:id="@+id/btn16"/>

</LinearLayout>
